working state