@@ -18,8 +18,7 @@
   </scm>
 
   <properties>
-    <maven.compiler.source>9</maven.compiler.source>
-    <maven.compiler.target>9</maven.compiler.target>
+    <maven.compiler.release>11</maven.compiler.release>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <jena.version>3.9.0</jena.version>
     <slf4j.version>1.7.25</slf4j.version>
@@ -90,15 +89,20 @@
 
   <build>
     <plugins>
-
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.8.0</version>
+        <version>3.8.1</version>
         <configuration>
-          <source>${maven.compiler.source}</source>
-          <target>${maven.compiler.target}</target>
+          <release>${maven.compiler.release}</release>
           <encoding>${project.build.sourceEncoding}</encoding>
+          <annotationProcessorPaths>
+            <annotationProcessorPath>
+              <groupId>org.pf4j</groupId>
+              <artifactId>pf4j</artifactId>
+              <version>3.0.1</version>
+            </annotationProcessorPath>
+          </annotationProcessorPaths>
           <annotationProcessors>
             <annotationProcessor>org.pf4j.processor.ExtensionAnnotationProcessor</annotationProcessor>
           </annotationProcessors>
@@ -107,7 +111,7 @@
           <dependency>
             <groupId>org.ow2.asm</groupId>
             <artifactId>asm</artifactId>
-            <version>6.2</version>
+            <version>7.0</version>
           </dependency>
         </dependencies>
       </plugin>
@@ -130,7 +134,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-javadoc-plugin</artifactId>
-        <version>3.0.1</version>
+        <version>3.1.0</version>
         <configuration>
           <links>
             <link>https://jena.apache.org/documentation/javadoc/jena/</link>
@@ -146,58 +150,58 @@
         </executions>
       </plugin>
 
-      <plugin>
-        <groupId>org.jacoco</groupId>
-        <artifactId>jacoco-maven-plugin</artifactId>
-        <version>0.8.1</version>
-        <executions>
-          <!--
-              Prepares the property pointing to the JaCoCo runtime agent which
-              is passed as VM argument when Maven the Surefire plugin is executed.
-          -->
-          <execution>
-            <id>pre-unit-test</id>
-            <goals>
-              <goal>prepare-agent</goal>
-            </goals>
-            <configuration>
-              <!-- Sets the path to the file which contains the execution data. -->
-              <destFile>${project.build.directory}/coverage-reports/jacoco-ut.exec</destFile>
-              <!--
-                  Sets the name of the property containing the settings
-                  for JaCoCo runtime agent.
-              -->
-              <propertyName>surefireArgLine</propertyName>
-            </configuration>
-          </execution>
-          <!--
-              Ensures that the code coverage report for unit tests is created after
-              unit tests have been run.
-          -->
-          <execution>
-            <id>post-unit-test</id>
-            <phase>test</phase>
-            <goals>
-              <goal>report</goal>
-            </goals>
-            <configuration>
-              <!-- Sets the path to the file which contains the execution data. -->
-              <dataFile>${project.build.directory}/coverage-reports/jacoco-ut.exec</dataFile>
-              <!-- Sets the output directory for the code coverage report. -->
-              <outputDirectory>${project.reporting.outputDirectory}/jacoco-ut</outputDirectory>
-            </configuration>
-          </execution>
-        </executions>
-      </plugin>
+<!--      <plugin>-->
+<!--        <groupId>org.jacoco</groupId>-->
+<!--        <artifactId>jacoco-maven-plugin</artifactId>-->
+<!--        <version>0.8.2</version>-->
+<!--        <executions>-->
+<!--          &lt;!&ndash;-->
+<!--              Prepares the property pointing to the JaCoCo runtime agent which-->
+<!--              is passed as VM argument when Maven the Surefire plugin is executed.-->
+<!--          &ndash;&gt;-->
+<!--          <execution>-->
+<!--            <id>pre-unit-test</id>-->
+<!--            <goals>-->
+<!--              <goal>prepare-agent</goal>-->
+<!--            </goals>-->
+<!--            <configuration>-->
+<!--              &lt;!&ndash; Sets the path to the file which contains the execution data. &ndash;&gt;-->
+<!--              <destFile>${project.build.directory}/coverage-reports/jacoco-ut.exec</destFile>-->
+<!--              &lt;!&ndash;-->
+<!--                  Sets the name of the property containing the settings-->
+<!--                  for JaCoCo runtime agent.-->
+<!--              &ndash;&gt;-->
+<!--              <propertyName>surefireArgLine</propertyName>-->
+<!--            </configuration>-->
+<!--          </execution>-->
+<!--          &lt;!&ndash;-->
+<!--              Ensures that the code coverage report for unit tests is created after-->
+<!--              unit tests have been run.-->
+<!--          &ndash;&gt;-->
+<!--          <execution>-->
+<!--            <id>post-unit-test</id>-->
+<!--            <phase>test</phase>-->
+<!--            <goals>-->
+<!--              <goal>report</goal>-->
+<!--            </goals>-->
+<!--            <configuration>-->
+<!--              &lt;!&ndash; Sets the path to the file which contains the execution data. &ndash;&gt;-->
+<!--              <dataFile>${project.build.directory}/coverage-reports/jacoco-ut.exec</dataFile>-->
+<!--              &lt;!&ndash; Sets the output directory for the code coverage report. &ndash;&gt;-->
+<!--              <outputDirectory>${project.reporting.outputDirectory}/jacoco-ut</outputDirectory>-->
+<!--            </configuration>-->
+<!--          </execution>-->
+<!--        </executions>-->
+<!--      </plugin>-->
 
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
-        <version>2.22.1</version>
+        <version>2.22.2</version>
         <configuration>
-          <forkCount>1</forkCount>
+          <forkCount>0</forkCount>
           <reuseForks>false</reuseForks>
-          <argLine>-Xms256m -Xmx512m ${surefireArgLine} </argLine>
+          <argLine>--illegal-access=permit -Xms256m -Xmx512m ${surefireArgLine}</argLine>
           <testFailureIgnore>false</testFailureIgnore>
           <skipTests>false</skipTests>
           <useManifestOnlyJar>false</useManifestOnlyJar>
@@ -328,6 +332,12 @@
       <groupId>org.pf4j</groupId>
       <artifactId>pf4j</artifactId>
       <version>3.0.1</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-lang3</artifactId>
+      <version>3.9</version>
     </dependency>
 
   </dependencies>
